# TestAPI

./: .gitignore  CMakeLists.txt
source/: CMakeLists.txt  common_defs.h  getjob.cpp  login.cpp  main.cpp  pch.h
source/SOAP/: CMakeLists.txt  sp.wsdl
